# ToClipboardTool

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml  release.yml
Docs/: en.md
Readme/: en.md
packaging/: package-linux.sh
src/: main.rs
